# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.38.0", features = ["full", "rt"] } # async networking
chrono = "0.4.38"                                   # time handling
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8"
base64 = "0.22.1"
uuid = { version = "1.8.0", features = ["v4"] }
scopeguard = "1.2.0"
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
regex = "1.4.2"